2005-12-15  Johannes Schmid <jhs@gnome.org>

	* plugins/document-manager/action-callbacks.c:
	(on_save_all1_activate), (on_swap_activate)
	plugins/document-manager/anjuta-docman.c:
	(on_save_as_filesel_response), (on_notebook_switch_page):
	
	Fixed some remaining issues in document-manger

2005-12-15	Johannes Schmid <jhs@gnome.org>

	* plugins/profile-default/default.anjuta:
	Load Search plugin and Message Manager by default

2005-12-14  Johannes Schmid <jhs@gnome.org>
	
	* plugins/editor/text_editor.c
	libanjuta/anjuta-utils.c:
	
	Check if files differ when gnome-vfs monitoring is used.
	(Bug #309688)

2005-12-13  Johannes Schmid <jhs@gnome.org>

	* plugins/document-manager/plugin.c:
	Only save modified files in ianjuta_file_savable_save() for document-manager
	as discussed on mailing list.
	
	* plugins/cvs-plugin/cvs-callbacks.c:
	Fixed dialog handling for empty log message

2005-12-13  Johannes Schmid <jhs@gnome.org>

	* plugins/search/plugin.c: Fixed search toolbar (FIXME: Wrapping);
	
	* plugins/project-manager/* Removed ununsed files
	
	* plugins/symbol-browser/an_symbol_iter.c
	plugins/build-basic-autotools/build-basic-autotools.c
	plugins/build-basic-autotools/executer.c
	plugins/class-gen/class_gen.c
	plugins/class-inheritance/class-inherit.c
	plugins/cvs-plugin/cvs-actions.c
	plugins/cvs-plugin/cvs-interface.c
	plugins/debug-manager/attach_process.
	plugins/devhelp/plugin.c
	plugins/document-manager/plugin.c
	plugins/document-manager/indent_util.c
	plugins/editor/properties.cxx
	plugins/editor/aneditor.cxx
	plugins/editor/style-editor.c
	plugins/editor/text_editor.c
	plugins/macro/macro_db.c
	tagmanager/c.c:
	
	Use DEBUG_PRINT for debug messages

	libanjuta/anjuta-debug.h: Include config.h
	
	HACKING: Updated (BTW: does anyone read this?)
	
2005-12-12  Johannes Schmid <jhs@gnome.org>

	Patch from Johan Ersvik <jersvik@fastmail.fm>:
	* plugins/gdb/debugger.c
	
	Fix a crasher in gdb plugin
	
	* plugins/gtodo/plugin.c
	plugins/search/plugin.c
	